# terra

./: .gitignore  AGENTS.md  CMakeLists.txt  FLASHING.md  README.md  agnts.md  idf_component.yml  partition_table.csv  partitions.csv  sdkconfig  sdkconfig.defaults
P4-C6-4.3 inch/: sdkconfig.defaults
P4-C6-4.3 inch/main/: Kconfig.projbuild  main.c
SD_Displayer/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
SD_Displayer/main/: CMakeLists.txt  bt_manager.c  bt_manager.h  idf_component.yml  main.c  storage.c  storage.h  ui_main.c  ui_main.h  wifi_manager.c  wifi_manager.h
agents/: README.md  manifest.json
agents/ARCHITECT/: AGENTS.md
agents/COMPLIANCE_HERP/: AGENTS.md
agents/DATABASE/: AGENTS.md
agents/FIRMWARE_CORE/: AGENTS.md
agents/HTTP_API/: AGENTS.md
agents/MQTT_BLE/: AGENTS.md
agents/REPO_SCOUT/: AGENTS.md
agents/SECURITY/: AGENTS.md
agents/TEST_RELEASE/: AGENTS.md
agents/_shared/: CHECKLIST.md  CONTRACT.md  DIFF_GATE.md  OUTPUT_FORMAT.md  diff_gate.ps1  diff_gate.py  diff_gate.sh
components/: AGENTS.md
components/bus/: AGENTS.md  CMakeLists.txt  can_driver.c  can_driver.h  i2c_bus_shared.c  i2c_bus_shared.h  rs485_driver.c  rs485_driver.h
components/ch422g/: AGENTS.md  CMakeLists.txt  Kconfig.projbuild  ch422g.c  ch422g.h
components/display/: AGENTS.md  CMakeLists.txt  rgb_lcd.c  rgb_lcd.h
components/gt911/: AGENTS.md  CMakeLists.txt  gt911_touch.c  gt911_touch.h
components/lvgl/: lv_conf.h
components/net/: CMakeLists.txt  net.c  net.h
components/power/: AGENTS.md  CMakeLists.txt  cs8501.c  cs8501.h
components/reptile_core/: CMakeLists.txt  reptile_core.c  reptile_core.h
components/sdspi_ch422g/: AGENTS.md  CMakeLists.txt  sdspi_ch422g.c  sdspi_ch422g.h
docs/: ARCHITECTURE.md  BRINGUP_CHECKLIST.md  BUILD_TROUBLESHOOTING.md  DEBUG_BACKTRACE.md  FLASH_BOYA.md  FLASH_FIX.md  HW_NOTES.md  PROJET_COMPLET.md  RAPPORT_CORRECTIFS.md  RAPPORT_CORRECTIFS_BUILD.md  RAPPORT_CORRECTIFS_RUNTIME.md  REMAINING_TASKS.md  SPEC_GESTIONNAIRE_ELEVAGE_REPTILES.md  UI_SPEC.md  analysis_report.md  assistant_reptiles_architecture.md  boot_log_example.txt  fix_report.md
main/: AGENTS.md  CMakeLists.txt  Kconfig  Kconfig.projbuild  app_config.h  app_hw.c  app_hw.h  app_lvgl_port.h  app_main.c  app_ui.c  app_ui.h  board_jc1060p470c.c  board_jc1060p470c.h  dashboard.c  dashboard.h  display_jd9165.c  display_jd9165.h  hal_can.c  hal_can.h  hal_display.c  hal_display.h  hal_ioexp_ch422g.c  hal_ioexp_ch422g.h  hal_rs485.c  hal_rs485.h  hal_sdcard.c  hal_sdcard.h  hal_touch.c  hal_touch.h  idf_component.yml  logs_panel.c  logs_panel.h  lv_conf.h  lv_theme_custom.c  lv_theme_custom.h  lvgl_port.c  lvgl_port.h  lvgl_runtime.c  lvgl_runtime.h  main.c  (+16 more)
main/ble/: ble_server.c  ble_server.h  ble_services.c  ble_services.h
main/database/: db_animals.c  db_animals.h  db_breeding.c  db_breeding.h  db_manager.c  db_manager.h  db_regulations.c  db_regulations.h
main/http/: http_server.c  http_server.h  websocket.c  websocket.h
main/http/routes/: api_animals.c  api_animals.h  api_breeding.c  api_breeding.h  api_documents.c  api_documents.h  api_regulations.c  api_regulations.h  api_system.c  api_system.h
main/mqtt/: mqtt_client.c  mqtt_client.h  mqtt_topics.h
main/onewire/: onewire.c  onewire.h
main/ota/: ota_manager.c  ota_manager.h  rollback.c  rollback.h
main/security/: auth.c  auth.h  certificates.c  certificates.h  crypto.c  crypto.h
main/sensors/: adc_sensors.c  adc_sensors.h  dht22.c  dht22.h  ds18b20.c  ds18b20.h  sensor_manager.c  sensor_manager.h
main/storage/: file_manager.c  file_manager.h  nvs_manager.c  nvs_manager.h  storage_manager.c  storage_manager.h
main/ui/: theme.c  theme.h  ui_events.c  ui_events.h  ui_init.c  ui_init.h  ui_screens.c  ui_screens.h  ui_theme.c  ui_theme.h
main/ui/panels/: dashboard_panel.c  dashboard_panel.h  peripherals_panel.c  peripherals_panel.h  settings_panel.c  settings_panel.h
main/utils/: datetime.c  datetime.h  json_utils.c  json_utils.h  logger.c  logger.h  uuid.c  uuid.h
main/wifi/: wifi_manager.c  wifi_manager.h  wifi_provisioning.c  wifi_provisioning.h
tools/: flash.sh  monitor.sh  ota_upload.py  validate_idf_env.py
ui_assets/: AGENTS.md
(+58 files in other folders)
