idf_component_register(
    SRCS
        "main.c"
        "wifi/wifi_manager.c"
        "wifi/wifi_provisioning.c"
        "http/http_server.c"
        "http/websocket.c"
        "http/routes/api_animals.c"
        "http/routes/api_regulations.c"
        "http/routes/api_breeding.c"
        "http/routes/api_documents.c"
        "http/routes/api_system.c"
        "database/db_manager.c"
        "database/db_animals.c"
        "database/db_regulations.c"
        "database/db_breeding.c"
        "storage/storage_manager.c"
        "storage/nvs_manager.c"
        "storage/file_manager.c"
        "sensors/sensor_manager.c"
        "sensors/dht22.c"
        "sensors/ds18b20.c"
        "sensors/adc_sensors.c"
        "mqtt/mqtt_client.c"
        "ble/ble_server.c"
        "ble/ble_services.c"
        "security/auth.c"
        "security/crypto.c"
        "security/certificates.c"
        "ota/ota_manager.c"
        "ota/rollback.c"
        "utils/json_utils.c"
        "utils/uuid.c"
        "utils/datetime.c"
        "utils/logger.c"
    INCLUDE_DIRS
        "."
        "wifi"
        "http"
        "http/routes"
        "database"
        "storage"
        "sensors"
        "mqtt"
        "ble"
        "security"
        "ota"
        "utils"
    REQUIRES
        cjson
)
